20210823 申訴區連結

--- a/index.html
+++ b/index.html
@@ -207,11 +207,11 @@
 							<div class="item">
 								<h4 class="title--ano">學生權益申訴區</h4>
 								<p class="para--ano">若需要學生會代為提起校內學生申訴，務必於校方決議形成後十日內將欲申訴之事項及相關證明上傳完成，以利後續作業。​</p>
-									<a href="../UTStudentAssociation.github.io/申訴網頁/教務問題/index教務.html" class="btn btn-primary">教務問題</a>
-									<a href="../UTStudentAssociation.github.io/申訴網頁/學務問題/index學務.html" class="btn btn-primary">學務問題</a>
-									<a href="../UTStudentAssociation.github.io/申訴網頁/總務財產/index總務.html" class="btn btn-primary">總務財產</a>
-									<a href="../UTStudentAssociation.github.io/申訴網頁/住宿問題/index住宿.html" class="btn btn-primary">住宿問題</a>
-									<a href="../UTStudentAssociation.github.io/申訴網頁/其他問題/index其他.html" class="btn btn-primary">其他問題</a>
+									<a href="/UTStudentAssociation.github.io/申訴網頁/教務問題/index教務.html" class="btn btn-primary">教務問題</a>
+									<a href="/UTStudentAssociation.github.io/申訴網頁/學務問題/index學務.html" class="btn btn-primary">學務問題</a>
+									<a href="/UTStudentAssociation.github.io/申訴網頁/總務財產/index總務.html" class="btn btn-primary">總務財產</a>
+									<a href="/UTStudentAssociation.github.io/申訴網頁/住宿問題/index住宿.html" class="btn btn-primary">住宿問題</a>
+									<a href="/UTStudentAssociation.github.io/申訴網頁/其他問題/index其他.html" class="btn btn-primary">其他問題</a>
 							</div>
 						</div>
 					</div>
