--- a/index.html
+++ b/index.html
@@ -369,12 +369,12 @@
 							<div class="contact-info">
 								<div class="info-item">
 									<h4 class="title"><span>會長's  PHONE & EMAIL</span></h4>
-									<p><a href="tel:09xxxxxxxx" class="info">陳柏諺：09XX-XXX-XXX</a>
+									<p><a href="tel:09xxxxxxxx" class="info">陳柏諺：0971-733-216</a>
 									<br><a href="mailto:U10815020@go.utaipei.edu.tw" class="info">U10815020@go.utaipei.edu.tw</a></p>
 								</div>
 								<div class="info-item">
 									<h4 class="title"><span>博愛副會長's  PHONE & EMAIL</span></h4>
-									<p><a href="tel:09xxxxxxxx" class="info">潘雅晴：09XX-XXX-XXX</a>
+									<p><a href="tel:09xxxxxxxx" class="info">潘雅晴：0918-973-679</a>
 									<br><a href="mailto:U10805008@go.utaipei.edu.tw" class="info">U10805008@go.utaipei.edu.tw</a></p>
 								</div>
 								<div class="info-item">
@@ -410,7 +410,7 @@
 							<div class="contact-info">
 								<div class="info-item">
 									<h4 class="title"><span>天母副會長's  PHONE & EMAIL</span></h4>
-									<p><a href="tel:09xxxxxxxx" class="info">謝紹廷：09XX-XXX-XXX</a>
+									<p><a href="tel:09xxxxxxxx" class="info">謝紹廷：0976-205-391</a>
 									<br><a href="mailto:ting20001127@gmail.com" class="info">ting20001127@gmail.com</a></p>
 								</div>
 								<div class="info-item">
