title margin-top change

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 			<div class="mask-dark"></div>
 				<div class="container">
 					<div class="section-intro-small">
-						<h2 class="title">學生會最新IG貼文</h2>
+						<h2 class="title--white">學生會最新IG貼文</h2>
 						<p class="para">想知道更多消息，請追蹤我們的官方帳號</p>
 					</div>
 					<div class="row-block">
