--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 								</div>
 								<div class="info-item">
 									<h4 class="title"><span>HOURS</span></h4>
-									<div class="info">每週一~五 中午12:10-13:00 固定值班</div>
+									<div class="info">每週一、三、五 中午12:10-13:00 固定值班</div>
 								</div>
 							</div>
 						</div>
