--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
 								</div>
 								<div class="info-item">
 									<h4 class="title"><span>LOCATION</span></h4>
-									<a href="https://reurl.cc/bzK24l" class="info">100台北市中正區愛國西路1號</a>
+									<a href="https://reurl.cc/bzK24l" class="info">100台北市中正區愛國西路1號 勤樸樓CB120</a>
 								</div>
 								<div class="info-item">
 									<h4 class="title"><span>HOURS</span></h4>
@@ -415,7 +415,7 @@
 								</div>
 								<div class="info-item">
 									<h4 class="title"><span>LOCATION</span></h4>
-									<a href="https://reurl.cc/WEKkpk" class="info">11153台北市士林區忠誠路二段101號</a>
+									<a href="https://reurl.cc/WEKkpk" class="info">11153台北市士林區忠誠路二段101號 鴻坦樓B411</a>
 								</div>
 								<div class="info-item">
 									<h4 class="title"><span>HOURS</span></h4>
