--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 								<p class="para--ano">學生會之重要訊息都會在此公告​，​若有任何問題請直接私訊我們。</p>
 									<a href="https://reurl.cc/XWML6M" class="btn btn-primary">校務會議</a>
 									<a href="https://reurl.cc/0j06LY" class="btn btn-primary">行政會議</a>
-									<a href="https://reurl.cc/O03VA3" class="btn btn-primary">防疫會議</a>
+									<a href="https://drive.google.com/drive/folders/17mCgOyc43n5Tk72pZYd1EScaPDQsZdnq?usp=sharing" class="btn btn-primary">防疫會議</a>
 									<a href="https://reurl.cc/Q9A4V9" class="btn btn-primary">其他校級會議</a>
 									<a href="https://reurl.cc/GmyeNZ" class="btn btn-primary">學生會行政會議</a>
 									<a href="https://reurl.cc/yENkAO" class="btn btn-primary">學生議會會議</a>
