--- a/index.html
+++ b/index.html
@@ -263,9 +263,12 @@
 									<div class="image" style="background-image: url(image/IG-1.jpg)"></div>
 								</div>
 								<div class="item">
-									<h4 class="title">◤寢具訂購看過來！◢ ​​</h4>
-									<p class="para">只需要兩個步驟 1.線上訂購 2.校內領取：博愛｜梅苑一樓中庭、天母｜宿舍九樓大廳
-									<br>#訂購截止日期｜9/6</p>
+									<h4 class="title">◤新生懶人包～來了！◢ ​​</h4>
+									<p class="para">
+										第一次體驗大學生活，心中想必既期待又緊張吧，
+										都還沒開學就有好多事情必須先知道，
+										害怕沒get學校的最新資訊嗎？
+										</p>
 									<a href="https://www.instagram.com/p/CSyzv_2hzl8/?utm_source=ig_web_copy_link/" class="btn btn-secondary">Read more</a>
 								</div>
 							</div>
