--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 										都還沒開學就有好多事情必須先知道，
 										害怕沒get學校的最新資訊嗎？
 										</p>
-									<a href="https://www.instagram.com/p/CSyzv_2hzl8/?utm_source=ig_web_copy_link/" class="btn btn-secondary">Read more</a>
+									<a href="https://www.instagram.com/p/CTd94COhKmj/?utm_source=ig_web_copy_link" class="btn btn-secondary">Read more</a>
 								</div>
 							</div>
 						</div><div
