--- a/index.html
+++ b/index.html
@@ -56,6 +56,27 @@
 					<div class="row-block--mt20">
 					<!-- 第一段 -->
 					<div class="section-intro-small">
+						<h2 class="title">◤寢具領貨須知◢</h2>
+					</div>					
+						<!-- <div class="col-lg-6 col-md-12 col-sm-12">
+							<div class="image-container">
+								<div class="image" style="background-image: url(./image/寢具DM1.jpg)"></div>
+							</div>
+						</div> -->
+						<!-- <div class="col-lg-12 col-md-12 col-sm-12"> -->
+						<div class="section-intro-small">
+							<h4 class="title--fresh">
+							</p>新生寢具發放配合開宿時間
+							<br>-博愛9/11~12於宿舍發放
+							<br>-天母9/10~12於宿舍發放
+							<br>其餘時段若要預約領取寢具請於入住前兩天私訊粉專確認領取日期與時段
+							<br>博愛校區寢具聯絡人 陳柏諺：0971-733-216
+							<br>天母校區寢具聯絡人 謝紹廷：0976-205-391
+							</p></h4>
+						</div>
+
+					<!-- 第二段 -->
+					<div class="section-intro-small">
 						<h2 class="title">新生專區</h2>
 					</div>
 						<div class="col-lg-6 col-md-12 col-sm-12">
@@ -92,37 +113,6 @@
 								天母會辦｜鴻坦樓B410​</p>
 						</div>
 					</div>
-
-					<!-- 第二段 -->
-					<div class="section-intro-small">
-						<h2 class="title">寢具訂購</h2>
-					</div>					
-					<!-- <div class="row-block--mt20"> -->
-						<div class="col-lg-6 col-md-12 col-sm-12">
-							<div class="image-container">
-								<div class="image" style="background-image: url(./image/寢具DM1.jpg)"></div>
-							</div>
-						</div><div
-						class="col-lg-12 col-md-12 col-sm-12">
-						<div class="item">
-							<h4 class="title--fresh">◤寢具訂購看過來！◢​​​</h4>
-							<p class="para--fresh">
-							北市大宿舍的床位與一般市售床墊尺寸略有不同，還在尋找合適尺寸嗎？還在煩惱如何搬運嗎？別擔心！我們幫你準備好了！線上訂購解決你所有的問題，不僅有符合學校宿舍的特殊尺寸床墊，也不用辛苦的搬寢具，直接在校內領取即可！
-							<br>
-							<br>▍只需要兩個步驟
-							<br>1.線上訂購 2.校內領取
-							<br>博愛｜梅苑一樓中庭
-							<br>天母｜宿舍九樓大廳
-							<br>
-							<br>▍特別要注意的是
-							<br>#訂購截止日期｜9/6
-							<br>#寢具領取時間
-							<br>博愛｜9/11、9/12 10:00~17:00
-							<br>天母｜9/10、9/11、9/12 10:00~17:00
-							<br>（領取時間與DM所寫不同，正確日期以本文為準。）
-							<br>有任何問題歡迎洽詢粉專~ </p><a href="https://reurl.cc/2r1MVE" class="btn--fresh">點我訂購</a>
-						</div>
-					<!-- </div> -->
 
 					<!-- 第三段 -->
 					<div class="section-intro-small">
